--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 body {
-  background-color: #06060D;
-  margin: 0;
+  margin: 20px;
+  background-color: #090A13;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #E8E8EA;
 }
 
 code {
